# various_samples

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
docs/: basic_of_cmake.md  create_empty_test.md  get_test_env.md  index.md  test_framework_report.md
docs/catch2/: Readme.md  assertions.md  benchmarks.md  ci-and-misc.md  cmake-integration.md  command-line.md  configuration.md  deprecations.md  event-listeners.md  generators.md  limitations.md  logging.md  matchers.md  other-macros.md  own-main.md  reporters.md  slow-compiles.md  test-cases-and-sections.md  test-fixtures.md  tostring.md  tutorial.md  why-catch.md
docs/design/: outline.md  outline2.md
docs/doctest/: assertions.md  benchmarks.md  build-systems.md  commandline.md  configuration.md  extensions.md  faq.md  features.md  logging.md  main.md  parameterized-tests.md  readme.md  reporters.md  stringification.md  testcases.md  tutorial.md
tests/: EmptyTest.cpp
